# mc-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
cli/: cli.py
cli/config/: permissions.py
cli/utils/: docker.py  logger.py  writer.py
